--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "register-service-worker": "^1.0.0",
+    "swiper": "^4.4.1",
     "vue": "^2.5.17",
-    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
